--- a/ike.service
+++ b/ike.service
@@ -6,8 +6,7 @@ Requires=docker.service
 [Service]
 TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker kill ike
-ExecStartPre=-/usr/bin/docker rm ike
-ExecStart=/usr/bin/docker run --name ike --privileged -p 500:500/udp -p 4500:4500/udp ike
+ExecStart=/usr/bin/docker start ike
 
 [Install]
 WantedBy=multi-user.target
